Bug 762270 - Align the file name to the right when direction is RTL. r=smontagu
UltraBlame original commit: f022adef69ff3cfb1ba7a424361488dc5b385f07

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -430,6 +430,12 @@ input[type="file"] > xul|label {
   color: inherit;
   font-size: inherit;
   letter-spacing: inherit;
+
+  
+
+
+
+  direction: ltr !important;
 }
 
 
@@ -438,6 +444,14 @@ input[type="file"] > input[type="button"] {
   font-size: inherit;
   letter-spacing: inherit;
   cursor: inherit;
+}
+
+
+
+input[type="file"]:-moz-dir(rtl) > xul|label {
+  -moz-padding-start: 0px;
+  padding-right: 5px;
+  text-align: right;
 }
 
 
@@ -621,16 +635,6 @@ textarea::-moz-placeholder,
 optgroup:before {
   unicode-bidi: inherit;
   text-overflow: inherit;
-}
-
- 
-
-
-
-
-input[type="file"] > xul|label {
-  direction: ltr !important;
-  text-align: inherit;
 }
 
 
